@@ -1777,7 +1777,7 @@ Dict commands_array(buf_T *buf, Arena *arena)
   Dict rv = arena_dict(arena, (size_t)gap->ga_len);
   for (int i = 0; i < gap->ga_len; i++) {
     char arg[2] = { 0, 0 };
-    Dict d = arena_dict(arena, 14);
+    Dict d = arena_dict(arena, 16);
     ucmd_T *cmd = USER_CMD_GA(gap, i);
 
     PUT_C(d, "name", CSTR_AS_OBJ(cmd->uc_name));
@@ -1787,7 +1787,14 @@ Dict commands_array(buf_T *buf, Arena *arena)
     PUT_C(d, "bar", BOOLEAN_OBJ(!!(cmd->uc_argt & EX_TRLBAR)));
     PUT_C(d, "register", BOOLEAN_OBJ(!!(cmd->uc_argt & EX_REGSTR)));
     PUT_C(d, "keepscript", BOOLEAN_OBJ(!!(cmd->uc_argt & EX_KEEPSCRIPT)));
-    PUT_C(d, "preview", BOOLEAN_OBJ(!!(cmd->uc_argt & EX_PREVIEW)));
+
+    if (cmd->uc_preview_luaref != LUA_NOREF) {
+      PUT_C(d, "preview", LUAREF_OBJ(api_new_luaref(cmd->uc_preview_luaref)));
+    }
+
+    if (cmd->uc_luaref != LUA_NOREF) {
+      PUT_C(d, "callback", LUAREF_OBJ(api_new_luaref(cmd->uc_luaref)));
+    }
 
     switch (cmd->uc_argt & (EX_EXTRA | EX_NOSPC | EX_NEEDARG)) {
     case 0:
@@ -1803,9 +1810,14 @@ Dict commands_array(buf_T *buf, Arena *arena)
     }
     PUT_C(d, "nargs", CSTR_TO_ARENA_OBJ(arena, arg));
 
-    char *cmd_compl = get_command_complete(cmd->uc_compl);
-    PUT_C(d, "complete", (cmd_compl == NULL
-                          ? NIL : CSTR_AS_OBJ(cmd_compl)));
+    if (cmd->uc_compl_luaref != LUA_NOREF) {
+      PUT_C(d, "complete", LUAREF_OBJ(api_new_luaref(cmd->uc_compl_luaref)));
+    } else {
+      char *cmd_compl = get_command_complete(cmd->uc_compl);
+
+      PUT_C(d, "complete", (cmd_compl == NULL
+                            ? NIL : CSTR_AS_OBJ(cmd_compl)));
+    }
     PUT_C(d, "complete_arg", cmd->uc_compl_arg == NULL
           ? NIL : CSTR_AS_OBJ(cmd->uc_compl_arg));
 
